⚡️ fixed the box colour when it is dark mode.

--- a/portfolio/frontend/src/components/Home.css
+++ b/portfolio/frontend/src/components/Home.css
@@ -523,7 +523,8 @@ body {
 
 @media (prefers-color-scheme: dark) {
     .aboutExplain {
-        color: #333;
+        color: white;
+        background-color: #444;
     }
 }
 
